fix(config): make CORS allowed origins configurable via env var